--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="nav-item"><a href="#welcome-section" title="Get to know danielpetrov" class="nav-link">About Me</a></li>
             <li class="nav-item"><a href="#projects" title="Projects danielpetrov has worked on" class="nav-link">Projects</a></li>
             <li class="nav-item"><a href="#experience" title="Web development experience" class="nav-link">Experience</a></li>
-           <li class="cv-li"><a href="https://www.visualcv.com/l7dhfhuwusg/" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span> Download CV </span></a> </li>
+           <li class="cv-li"><a href="./assets/cv.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span> Download CV </span></a> </li>
           </ul>
         </nav>
       </div>
@@ -175,7 +175,7 @@
         <div class="interests-div d-flex justify-content-start align-items-center" data-aos="fade-up"
           data-aos-delay="400">
           &nbsp;&nbsp;&nbsp;
-          <span class="iconify interests-logo" data-icon="material-symbols:currency_bitcoin" data-width="35"
+          <span class="iconify interests-logo" data-icon="ion:logo-bitcoin" data-width="35"
             data-height="35"></span>
             
           &nbsp; 
@@ -336,17 +336,17 @@
               </li>
 
                <li style='background-image: url("./images/cripto-bot.jpg")' class="project-tile project-background-image">
-                <a href="https://danielp2850.github.io/greet-card/" title="Thanksgiving Card" target="_blank">
+                <a href="https://github.com/danielp2850/TradingBotBybit" title="CryptoTradingBot" target="_blank">
                   <!-- <img class="project__image" src="./images/thankscard.jpg" alt="Greeting Card"> -->
                   <div class="project__info">
-                    <h3 class="project__name">Crypto Bot Coming Soon</h3>
+                    <h3 class="project__name">Crypto Bot</h3>
                     <ul class="tech">
                       <li class="tech-item--title">Tech:</li>
                       <li class="tech-item python">Python</li>
                       <li class="tech-item django">Django</li>
                       <li class="tech-item js">Javascript</li>
                     </ul>
-                    <p class="project__description"></p>
+                    <p class="project__description">CryptoTradingBot on the Bybit Exchange</p>
                   </div>
                 </a>
               </li>
